# peter-games

./: .gitignore  CLAUDE.md  README.md
army/: README.md  ai.py  army.py  entities.py  game_logic.py  pyproject.toml  rendering.py
flappy2/: README.md  flappy_2player.py  pyproject.toml
omd/: README.md  config.py  entities.py  game_state.py  main.py  maze_generator.py  pyproject.toml  rendering.py
slicing/: README.md  pyproject.toml  run_game.py
slicing/monster_slicing/: __init__.py  game.py
snake/: pyproject.toml  snake.py
spacewar/: README.md  ai.py  entities.py  pyproject.toml  spacewar.py
spacewar/ai/: __init__.py  base.py  cautious.py  delivery.py  original.py
spacewar/ai/utils/: __init__.py  decision.py  navigation.py  prediction.py
